Infra: fix docker

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,10 +5,4 @@ COPY package*.json ./
 RUN npm install
 COPY . .
 EXPOSE 5173
-RUN npm run build
-# CMD ["npm", "run", "build"]
-
-FROM nginx:1.27.3
-EXPOSE 3000
-COPY ./nginx.conf /etc/nginx/conf.d/nginx.conf
-COPY --from=builder /app/build /usr/share/nginx/html
+CMD ["npm", "run", "dev"]
