--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,19 +1,13 @@
-events {}
+server {
+    listen 80;
+    server_name _;
 
-http {
-    upstream todo_frontend {
-        server todo-frontend:5173;
+    root /usr/share/nginx/html;
+    index index.html;
+
+    location / {
+        try_files $uri /index.html;
     }
 
-    server {
-        listen 80;
-        server_name localhost;
-
-        location / {
-            proxy_pass http://todo_frontend;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-    }
+    error_page 404 /index.html;
 }
