--- a/.github/workflows/push-aws.yaml
+++ b/.github/workflows/push-aws.yaml
@@ -3,42 +3,80 @@ on:
   push:
     branches: main
 jobs:
-  deploy:
-    name: Deploy to EC2
+  deploy-frontend:
+    name: Deploy Frontend to EC2
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout the files
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Copy files with SSH
+      - name: Deploy Frontend Files
         uses: easingthemes/ssh-deploy@main
         env:
-          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+          SSH_PRIVATE_KEY: ${{ secrets.FRONTEND_SSH_KEY }}
           ARGS: '-rltgoDzv0 --delete'
 
           # PASTA A SER ENVIADA
-          SOURCE: './'
+          SOURCE: './frontend/' # Make sure this is the correct frontend directory
 
           # URL AWS
-          REMOTE_HOST: ${{ secrets.REMOTE_HOST }}
+          REMOTE_HOST: ${{ secrets.FRONTEND_HOST }}
 
           # USUARIOAWS
-          REMOTE_USER: ${{ secrets.REMOTE_USER }}
+          REMOTE_USER: ${{ secrets.FRONTEND_USER }}
 
           # PASTA AWS
-          TARGET: '/home/${{ secrets.REMOTE_USER }}/app'
+          TARGET: '/var/www/frontend' # Adjust as needed
 
           # PASTAS A SEREM IGNORADAS
           EXCLUDE: '.git*,node_modules*,.github*,__pycache__*'
 
-      - name: Restart Application
+      - name: Restart Frontend Service (Optional)
         uses: appleboy/ssh-action@v0.1.7
         with:
-          host: ${{ secrets.REMOTE_HOST }}
-          username: ${{ secrets.REMOTE_USER }}
-          key: ${{ secrets.EC2_SSH_KEY }}
+          host: ${{ secrets.FRONTEND_HOST }}
+          username: ${{ secrets.FRONTEND_USER }}
+          key: ${{ secrets.FRONTEND_SSH_KEY }}
           script: |
-            cd /home/${{ secrets.REMOTE_USER }}/app
+            cd /var/www/frontend
+            npm install  # If needed
+            npm run build  # If using React/Vue
+            systemctl restart nginx  # Restart Nginx if using it
+
+  deploy-backend:
+    name: Deploy Backend to EC2
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Deploy Backend Files
+        uses: easingthemes/ssh-deploy@main
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.BACKEND_SSH_KEY }}
+          ARGS: '-rltgoDzv0 --delete'
+
+          # PASTA A SER ENVIADA
+          SOURCE: './backend/'
+
+          # AWS URL
+          REMOTE_HOST: ${{ secrets.BACKEND_HOST }}
+
+          # AWS USER
+          REMOTE_USER: ${{ secrets.BACKEND_USER }}
+
+          # AWS FOLDER
+          TARGET: '/home/${{ secrets.BACKEND_USER }}/backend'
+
+          EXCLUDE: '.git*,node_modules*,.github*,__pycache__*'
+
+      - name: Restart Backend Service
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.BACKEND_HOST }}
+          username: ${{ secrets.BACKEND_USER }}
+          key: ${{ secrets.BACKEND_SSH_KEY }}
+          script: |
+            cd /home/${{ secrets.BACKEND_USER }}/app/backend
             docker-compose down
             docker-compose up -d --build
