--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -20,13 +20,11 @@ jobs:
       - name: Set up Node
         uses: actions/setup-node@v3
         with:
-          node-version: 20.9.0
+          node-version: 23.4.0
 
       - name: Install dependencies
         working-directory: ./frontend
-        run: |
-          echo $PWD
-          npm ci
+        run: npm ci
 
       - name: Run tests
         working-directory: ./frontend
