--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -43,12 +43,15 @@ jobs:
           go-version: 1.23.4
 
       - name: Install dependencies
+        working-directory: ./backend
         run: go mod tidy
 
       - name: Run tests
+        working-directory: ./backend
         run: go test -v ./...
 
       - name: Run tests with coverage
+        working-directory: ./backend
         run: go test -cover ./...
 
       - name: Upload coverage report
