--- a/infra/k8s/dev/frontend/frontend-cluster-ip.yaml
+++ b/infra/k8s/dev/frontend/frontend-cluster-ip.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend-cluster-ip-service
+  name: frontend-service
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     component: frontend
   ports:
-    - port: 80
+    - protocol: TCP
+      port: 80
       targetPort: 80
+      nodePort: 30080
