--- a/infra/k8s/dev/database/db-cluster-ip-service.yaml
+++ b/infra/k8s/dev/database/db-cluster-ip-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: database-cluster-ip-service
+  name: database-service
 spec:
   type: ClusterIP
   selector:
