--- a/infra/docker/dev/docker-compose.yaml
+++ b/infra/docker/dev/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       context: '../../../frontend/'
       dockerfile: Dockerfile.dev
     ports:
-      - '5173:5173'
+      - '80:5173'
     volumes:
       - ../../../frontend:/app
     networks:
@@ -15,7 +15,7 @@ services:
 
   backend:
     container_name: todos-backend
-    restart: on-failure:3
+    # restart: always
     image: woragis/todos-backend
     build:
       context: '../../../backend/'
@@ -23,7 +23,10 @@ services:
     ports:
       - '8080:8080'
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+      cache:
+        condition: service_healthy
     environment:
       - DATABASE_URL=postgres://postgres:password@db:5432/todos?sslmode=disable
       - REDIS_URL=redis://todos-cache:6379
@@ -39,6 +42,9 @@ services:
       POSTGRES_DB: todos
     ports:
       - '5432:5432'
+    depends_on:
+      cache:
+        condition: service_healthy
     volumes:
       - todos_data:/var/lib/postgresql/data
     healthcheck:
