--- a/infra/k8s/dev/db-cluster-ip-service.yaml
+++ b/infra/k8s/dev/db-cluster-ip-service.yaml
@@ -7,5 +7,6 @@ spec:
   selector:
     component: database
   ports:
-    - port: 5432
+    - protocol: TCP
+      port: 5432
       targetPort: 5432
