--- a/infra/k8s/prod/frontend-cluster-ip.yaml
+++ b/infra/k8s/prod/frontend-cluster-ip.yaml
@@ -1,4 +1,4 @@
-apiVersion: 1
+apiVersion: v1
 kind: Service
 metadata:
   name: frontend-cluster-ip-service
@@ -7,5 +7,5 @@ spec:
   selector:
     component: frontend
   ports:
-    - port: 5173
-      targetPort: 5173
+    - port: 80
+      targetPort: 80
