--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,7 +5,10 @@ edition = "2021"
 
 [dependencies]
 axum = "0.8.1"
+chrono = "0.4.39"
 dotenvy = "0.15.7"
+jsonwebtoken = "9.3.1"
+once_cell = "1.20.3"
 openssl = { version = "0.10.70", features = ["vendored"] }
 reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1.0.217", features = ["derive"] }
