Add jwt secret key

--- a/infra/docker/dev/docker-compose.yaml
+++ b/infra/docker/dev/docker-compose.yaml
@@ -29,6 +29,7 @@ services:
         condition: service_healthy
     environment:
       - DATABASE_URL=postgres://postgres:password@db:5432/todos?sslmode=disable
+      - SECRET_KEY=banana
       - REDIS_URL=redis://todos-cache:6379
     networks:
       - todos-network
