--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-query": "^5.63.0",
+    "@tanstack/react-router": "^1.105.0",
     "axios": "^1.7.9",
     "i18next-browser-languagedetector": "^8.0.2",
     "js-cookie": "^3.0.5",
@@ -22,8 +23,7 @@
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
     "react-icons": "^5.4.0",
-    "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.1"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -38,7 +38,6 @@
     "@types/react-i18next": "^7.8.3",
     "@types/react-icons": "^2.2.7",
     "@types/react-redux": "^7.1.34",
-    "@types/react-router-dom": "^5.3.3",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
