--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.9",
     "i18next-browser-languagedetector": "^8.0.2",
     "js-cookie": "^3.0.5",
+    "path": "^0.12.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
@@ -33,6 +34,7 @@
     "@types/axios": "^0.9.36",
     "@types/i18next-browser-languagedetector": "^2.0.2",
     "@types/js-cookie": "^3.0.6",
+    "@types/node": "^22.13.4",
     "@types/react": "^18.3.17",
     "@types/react-dom": "^18.3.5",
     "@types/react-i18next": "^7.8.3",
