Install and test @tanstack/react-form

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@tanstack/react-form": "^0.42.0",
     "@tanstack/react-query": "^5.63.0",
     "@tanstack/react-router": "^1.105.0",
     "axios": "^1.7.9",
