--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.5",
     "@reduxjs/toolkit": "^2.5.0",
     "@tanstack/react-form": "^0.42.0",
     "@tanstack/react-query": "^5.63.0",
