--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.8.1"
+axum-extra = { version = "0.10.0", features = ["typed-header"] }
 chrono = "0.4.39"
 dotenvy = "0.15.7"
 jsonwebtoken = "9.3.1"
