--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.8.1"
-axum-extra = { version = "0.10.0", features = ["typed-header"] }
+actix-cors = "0.7.0"
+actix-web = "4.9.0"
 chrono = "0.4.39"
 dotenvy = "0.15.7"
 jsonwebtoken = "9.3.1"
