--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 actix-cors = "0.7.0"
 actix-web = "4.9.0"
 chrono = "0.4.39"
+deadpool-redis = { version = "0.19.0", features = ["rt_tokio_1"] }
 dotenvy = "0.15.7"
 jsonwebtoken = "9.3.1"
 once_cell = "1.20.3"
