--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -12,6 +12,7 @@ dotenvy = "0.15.7"
 jsonwebtoken = "9.3.1"
 once_cell = "1.20.3"
 openssl = { version = "0.10.70", features = ["vendored"] }
+regex = "1.11.1"
 reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
