--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -9,7 +9,9 @@ actix-web = "4.9.0"
 chrono = "0.4.39"
 deadpool-redis = { version = "0.19.0", features = ["rt_tokio_1"] }
 dotenvy = "0.15.7"
+fern = "0.7.1"
 jsonwebtoken = "9.3.1"
+log = "0.4.26"
 once_cell = "1.20.3"
 openssl = { version = "0.10.70", features = ["vendored"] }
 regex = "1.11.1"
