Implment bcrypt to auth handlers login and register

--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 actix-cors = "0.7.0"
 actix-web = "4.9.0"
+bcrypt = "0.17.0"
 chrono = "0.4.39"
 deadpool-redis = { version = "0.19.0", features = ["rt_tokio_1"] }
 dotenvy = "0.15.7"
