--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -6,11 +6,15 @@ edition = "2021"
 [dependencies]
 actix-cors = "0.7.0"
 actix-web = "4.9.0"
+aes = "0.8.4"
 bcrypt = "0.17.0"
+cbc = "0.1.2"
 chrono = "0.4.39"
+cipher = "0.4.4"
 deadpool-redis = { version = "0.19.0", features = ["rt_tokio_1"] }
 dotenvy = "0.15.7"
 fern = "0.7.1"
+hex = "0.4.3"
 jsonwebtoken = "9.3.1"
 log = "0.4.26"
 once_cell = "1.20.3"
