--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 actix-cors = "0.7.0"
 actix-web = "4.9.0"
 aes = "0.8.4"
+aes-gcm = "0.10.3"
+base64 = "0.22.1"
 bcrypt = "0.17.0"
 cbc = "0.1.2"
 chrono = "0.4.39"
@@ -19,10 +21,12 @@ jsonwebtoken = "9.3.1"
 log = "0.4.26"
 once_cell = "1.20.3"
 openssl = { version = "0.10.70", features = ["vendored"] }
+rand = "0.9.0"
 regex = "1.11.1"
 reqwest = { version = "0.12.12", features = ["json"] }
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.138"
+sha2 = "0.10.8"
 tokio = { version = "1.43.0", features = ["full"] }
 tokio-postgres = { version = "0.7.13", features = ["with-uuid-1"] }
 tower-http = { version = "0.6.2", features = ["cors", "trace"] }
